--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -34,6 +34,151 @@
 			],
 			"isBackground": false,
 			"group": "build"
+		},
+		{
+			"label": "Build SSHExplorer (Debug Win)",
+			"type": "shell",
+			"command": "dotnet",
+			"args": [
+				"build",
+				"-t:Build",
+				"-p:Configuration=Debug",
+				"-f",
+				"net9.0-windows10.0.19041.0",
+				"-p:WindowsPackageType=None",
+				"c:\\Repos\\TripleG3\\SSH-UI\\SSH-Explorer\\SSHExplorer.csproj"
+			],
+			"isBackground": false,
+			"group": "build"
+		},
+		{
+			"label": "Build SSHExplorer (Debug Win)",
+			"type": "shell",
+			"command": "dotnet",
+			"args": [
+				"build",
+				"-t:Build",
+				"-p:Configuration=Debug",
+				"-f",
+				"net9.0-windows10.0.19041.0",
+				"-p:WindowsPackageType=None",
+				"c:\\Repos\\TripleG3\\SSH-UI\\SSH-Explorer\\SSHExplorer.csproj"
+			],
+			"isBackground": false,
+			"group": "build"
+		},
+		{
+			"label": "Build SSHExplorer (Debug Win)",
+			"type": "shell",
+			"command": "dotnet",
+			"args": [
+				"build",
+				"-t:Build",
+				"-p:Configuration=Debug",
+				"-f",
+				"net9.0-windows10.0.19041.0",
+				"-p:WindowsPackageType=None",
+				"c:\\Repos\\TripleG3\\SSH-UI\\SSH-Explorer\\SSHExplorer.csproj"
+			],
+			"isBackground": false,
+			"group": "build"
+		},
+		{
+			"label": "Build SSHExplorer (Debug Win)",
+			"type": "shell",
+			"command": "dotnet",
+			"args": [
+				"build",
+				"-t:Build",
+				"-p:Configuration=Debug",
+				"-f",
+				"net9.0-windows10.0.19041.0",
+				"-p:WindowsPackageType=None",
+				"c:\\Repos\\TripleG3\\SSH-UI\\SSH-Explorer\\SSHExplorer.csproj"
+			],
+			"isBackground": false,
+			"group": "build"
+		},
+		{
+			"label": "Rebuild SSHExplorer after XAML binding fixes",
+			"type": "shell",
+			"command": "dotnet",
+			"args": [
+				"build",
+				"-t:Build",
+				"-p:Configuration=Debug",
+				"-f",
+				"net9.0-windows10.0.19041.0",
+				"-p:WindowsPackageType=None",
+				"c:\\Repos\\TripleG3\\SSH-UI\\SSH-Explorer\\SSHExplorer.csproj"
+			],
+			"isBackground": false,
+			"group": "build"
+		},
+		{
+			"label": "Rebuild after xmlns fix",
+			"type": "shell",
+			"command": "dotnet",
+			"args": [
+				"build",
+				"-t:Build",
+				"-p:Configuration=Debug",
+				"-f",
+				"net9.0-windows10.0.19041.0",
+				"-p:WindowsPackageType=None",
+				"c:\\Repos\\TripleG3\\SSH-UI\\SSH-Explorer\\SSHExplorer.csproj"
+			],
+			"isBackground": false,
+			"group": "build"
+		},
+		{
+			"label": "Rebuild after binding source fix",
+			"type": "shell",
+			"command": "dotnet",
+			"args": [
+				"build",
+				"-t:Build",
+				"-p:Configuration=Debug",
+				"-f",
+				"net9.0-windows10.0.19041.0",
+				"-p:WindowsPackageType=None",
+				"c:\\Repos\\TripleG3\\SSH-UI\\SSH-Explorer\\SSHExplorer.csproj"
+			],
+			"isBackground": false,
+			"group": "build"
+		},
+		{
+			"label": "Rebuild after project tweak",
+			"type": "shell",
+			"command": "dotnet",
+			"args": [
+				"build",
+				"-t:Build",
+				"-p:Configuration=Debug",
+				"-f",
+				"net9.0-windows10.0.19041.0",
+				"-p:WindowsPackageType=None",
+				"c:\\Repos\\TripleG3\\SSH-UI\\SSH-Explorer\\SSHExplorer.csproj"
+			],
+			"isBackground": false,
+			"group": "build"
+		},
+		{
+			"label": "Rebuild after binding cleanup",
+			"type": "shell",
+			"command": "dotnet",
+			"args": [
+				"build",
+				"-t:Build",
+				"-p:Configuration=Debug",
+				"-f",
+				"net9.0-windows10.0.19041.0",
+				"-p",
+				"WindowsPackageType=None",
+				"c:\\Repos\\TripleG3\\SSH-UI\\SSH-Explorer\\SSHExplorer.csproj"
+			],
+			"isBackground": false,
+			"group": "build"
 		}
 	]
 }
