--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -179,6 +179,40 @@
 			],
 			"isBackground": false,
 			"group": "build"
+		},
+		{
+			"label": "Rebuild with double-click navigation",
+			"type": "shell",
+			"command": "dotnet",
+			"args": [
+				"build",
+				"-t:Build",
+				"-p:Configuration=Debug",
+				"-f",
+				"net9.0-windows10.0.19041.0",
+				"-p",
+				"WindowsPackageType=None",
+				"c:\\Repos\\TripleG3\\SSH-UI\\SSH-Explorer\\SSHExplorer.csproj"
+			],
+			"isBackground": false,
+			"group": "build"
+		},
+		{
+			"label": "Rebuild after auto-select profile",
+			"type": "shell",
+			"command": "dotnet",
+			"args": [
+				"build",
+				"-t:Build",
+				"-p:Configuration=Debug",
+				"-f",
+				"net9.0-windows10.0.19041.0",
+				"-p",
+				"WindowsPackageType=None",
+				"c:\\Repos\\TripleG3\\SSH-UI\\SSH-Explorer\\SSHExplorer.csproj"
+			],
+			"isBackground": false,
+			"group": "build"
 		}
 	]
 }
