Enhance SSH-Explorer functionality with new features and improvements
- Added a rebuild task in tasks.json for easier project management.
- Updated README.md to reflect new features including double-click navigation and drag-and-drop support.
- Enhanced MainViewModel to restore UI state and last used profile on startup.
- Improved MainPage.xaml with new action commands for remote and local file operations.
- Implemented terminal resizing and pane splitting functionality in MainPage.xaml.cs.
- Introduced PathHelpers utility class for path manipulation.
- Added .editorconfig for consistent code style settings.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -213,6 +213,23 @@
 			],
 			"isBackground": false,
 			"group": "build"
+		},
+		{
+			"label": "Rebuild after actions/hover/pin changes",
+			"type": "shell",
+			"command": "dotnet",
+			"args": [
+				"build",
+				"-t:Build",
+				"-p:Configuration=Debug",
+				"-f",
+				"net9.0-windows10.0.19041.0",
+				"-p",
+				"WindowsPackageType=None",
+				"c:\\Repos\\TripleG3\\SSH-UI\\SSH-Explorer\\SSHExplorer.csproj"
+			],
+			"isBackground": false,
+			"group": "build"
 		}
 	]
 }
