Refactor MainPage and implement state management for terminal and file explorer
- Removed SkiaSharp dependency from MainPage.xaml.cs.
- Updated terminal height handling to use TerminalState.
- Simplified command execution in MainPage.
- Introduced FileExplorerState and ProfileState records for better state management.
- Created SshConnectionState and TerminalState records to encapsulate connection and terminal states.
- Implemented StatePublisher for managing state changes across services.
- Developed FileExplorerService and ITerminalService for handling file operations and terminal interactions.
- Added OptionsViewModel and OptionsPage for user settings management, including theme and terminal preferences.
- Implemented AsyncBindingCommand for asynchronous command execution in ViewModels.
- Updated UI in OptionsPage.xaml to allow users to configure settings.

--- a/SSHExplorer.csproj
+++ b/SSHExplorer.csproj
@@ -67,6 +67,7 @@
 		<PackageReference Include="SkiaSharp" Version="*" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="*" />
 		<PackageReference Include="System.Text.Json" Version="*" />
+		<PackageReference Include="TripleG3.CIS.Maui" Version="1.0.2" />
 	</ItemGroup>
 
 </Project>
