Update to .NET 9, add ViewModelBase and commands
Updated target framework to .NET 9 for multiple projects.
Replaced old solution file with a new one, adding project references.
Removed unused Class1.cs and reorganized SshCommandsTests.cs.
Added ViewModelBase.cs for INotifyPropertyChanged support.
Introduced BindingCommand.cs for MVVM command bindings.
Implemented ProfileServiceViewModel.cs for profile management.
Updated copilot-instructions.md with Azure best practices.
Configured test parallelization in MSTestSettings.cs.
Added basic test class Test1.cs and new test project.

--- a/tests/TripleG3.SSH.WinUI.ViewModels.Tests/TripleG3.SSH.WinUI.ViewModels.Tests.csproj
+++ b/tests/TripleG3.SSH.WinUI.ViewModels.Tests/TripleG3.SSH.WinUI.ViewModels.Tests.csproj
@@ -9,7 +9,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\src\TripleG3.SSH.WinUI.Models\TripleG3.SSH.WinUI.Models.csproj" />
+	  <ProjectReference Include="..\..\src\TripleG3.SSH.WinUI.ViewModels\TripleG3.SSH.WinUI.ViewModels.csproj" />
 	</ItemGroup>
-
+	
 </Project>
